# yggdrasil

./: Cargo.toml  README.md
blog/content/: 20230529.md  20230605.md
src/: earendel.html  earendel.mjs  index.html  main.rs
src/blog/: blog.html  blog.mjs
src/earendel/: earendel.html  earendel.mjs
src/heimdall/: heimdall.html  heimdall.mjs
src/kids/: kids.css  kids.html  kids.mjs  login.html  login.mjs  unauth.html
